Style the buttons differently using the other unique class

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -2,3 +2,10 @@
     font-size: 28px;
     font-family: Helvetica,'Times New Roman', sans-serif;
 }
+.btn.black{
+    background-color: #1a1414;
+    color: #e2f9f2;
+}
+.btn.orange{
+    background-color: #e2730b;
+}
