--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  align-content: center;
+
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +25,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+
+  align-self: center;
 }
 
 .logo {
@@ -35,6 +42,11 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+
+  margin-left: auto;
+  margin-right: 16px;
+  height: fit-content;
+  align-self: center;
 }
 
 a {
@@ -45,4 +57,8 @@ a {
 
 ul {
   list-style-type: none;
+
+  display: flex;
+  gap: 16px;
+padding-left: 16px;
 }
