--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  padding: 20px; /* Added by me */
 }
 
 .icon {
@@ -67,3 +69,25 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+/*Adding from here*/
+
+.content{
+  width: 425px;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 11px;
+}
+.modal{
+  display: flex;
+  justify-content: space-evenly;
+  gap:20px;
+  flex-shrink: initial;
+}
+.text{
+  margin-bottom: 11px;
+}
+
