--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,48 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+/*Adding code here*/
+
+.header,
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+.left-links,
+.right-links{
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+}
+a{
+  text-decoration: none;
+  color: #888;
+}
+.footer{
+  display: flex;
+  background-color: #eeeeee;
+  flex: 0;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  gap: 10px;
+  flex: 0;
+}
+button{
+  padding: 10px 15px;
+}
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.right-links{
+  padding-right: 15px;
+}
+.left-links{
+  padding: 0 15px;
+}
