--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
@@ -26,4 +31,60 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/*Adding styling here*/
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+.header{
+  font-size: 32px;
+  font-weight: 900;
+
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+  padding-left: 16px;
+}
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content{
+  display: flex;
+  flex: 1 0 auto;
+}
+
+.sidebar{
+  width: 300px;
+  flex: 1 0 auto;
+
+  padding: 16px;
+}
+ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 24px;
+}
+
+.card-container{
+  display:flex;
+  padding: 48px;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.card{
+  width: 200px;
+  height: 300px;
+  padding: 10px;
 }
